# chatbot-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LLM_PROVIDERS.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  poetry.lock.example  pyproject.toml  test_api.py
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  chat.py  projects.py  prompts.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/models/: chat.py  file.py  project.py  prompt.py  user.py
backend/app/schemas/: auth.py  chat.py  project.py  prompt.py  user.py
backend/app/services/: chat_service.py
backend/app/services/llm/: base.py  groq.py  openai.py  openrouter.py
backend/tests/: test_api.py
frontend/: .env.example  README.md  package-lock.json  package.json  streamlit_app.py
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AuthPage.js  ChatInterface.js  CreateProjectModal.js  PromptsManager.js  Sidebar.js
frontend/src/services/: api.js
